@@ -80,11 +80,12 @@ public class UserService {
     public UserDto getByEmail(String email) {
         List<UserEntity> userEntityList = userRepository.getByEmail(email);
         UserDto userDto = null;
-//        if (userEntityList != null && !userEntityList.isEmpty()) {
-//            userDto = mappers.convertToUserDto(userEntityList.getFirst());
-//        } else {
-//            new NotFoundInDbException("Не найден в БД пользователь с e-mail: " + email);
-//        }
+        if (userEntityList != null && !userEntityList.isEmpty()) {
+            //userDto = mappers.convertToUserDto(userEntityList.getFirst());
+            userDto = mappers.convertToUserDto(userEntityList.get(0));
+        } else {
+            new NotFoundInDbException("Не найден в БД пользователь с e-mail: " + email);
+        }
         return userDto;
 
     }
